# hello

./: .gitmodules  Readme.md  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/cc/ifnot/app/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/aosp/: CMakeLists.txt  ashmem-dev.cpp  ashmem_test.cpp  memfd_test.c  unique_fd.h
android/app/src/main/cpp/: CMakeLists.txt  foo.cpp  foo.h  ip-up-vpn.c
android/app/src/main/cpp/go_jni/: go.mod
android/app/src/main/cpp/test/: foo_unittest.cpp
android/app/src/main/java/: a.kt  app.kt
android/app/src/main/java/cc/ifnot/app/: KotlinActivity.kt  MainActivity.java
android/app/src/main/java/cc/ifnot/app/jni/: FooWrap.java  GoJniWrap.java
android/app/src/main/java/cc/ifnot/app/service/: ServerService.kt
android/app/src/main/looper/: CMakeLists.txt  CallStack.h  KeyedVector.h  Looper.cpp  Looper.h  Looper_test.cpp  RefBase.cpp  RefBase.h  SharedBuffer.cpp  SortedVector.h  StopWatch.cpp  StopWatch.h  String16.cpp  String16.h  String8.cpp  String8.h  StrongPointer.cpp  ThreadDefs.h  Timers.cpp  Timers_test.cpp  Unicode.cpp  Vector.h  VectorImpl.cpp  log.h  thread_defs.h
android/app/src/main/native_activity/: CMakeLists.txt  natie_activity.cc
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/test/java/cc/ifnot/app/: ExampleUnitTest.java
android/ax/: build.gradle
android/ax/src/androidTest/java/cc/ifnot/ax/: ExampleInstrumentedTest.kt
android/ax/src/main/: AndroidManifest.xml
android/ax/src/main/aidl/cc/ifnot/ax/: IService.aidl
android/ax/src/main/aidl/cc/ifnot/ax/data/: Req.aidl  Res.aidl
android/ax/src/main/java/cc/ifnot/ax/: App.kt  FakeProvider.kt  HideActivity.kt  MainActivity.kt
android/ax/src/main/java/cc/ifnot/ax/service/: ClientService.java  Req.java  Res.java  Task.java  WindowService.java
android/ax/src/main/java/cc/ifnot/ax/utils/: reflect.kt
android/ax/src/main/res/layout/: fragment_my.xml
android/hello/: build.gradle
android/hello/src/androidTest/java/cc/ifnot/cc/thread/: ExampleInstrumentedTest.java
android/hello/src/main/java/cc/ifnot/app/hello/: App.java  MainActivity.java  MainActivity2.java
android/hello/src/main/res/xml/: shortcuts.xml
android/hello/src/test/java/cc/ifnot/cc/thread/: ExampleUnitTest.java
android/libs/: build.gradle
android/libs/src/main/: AndroidManifest.xml
android/libs/src/main/java/cc/ifnot/app/libs/: App.java  Base.java  EverPhotoService.java  IService.java  MainActivity.java  Media.java  MediaInfo.java  WaterFall.java
android/libs/src/main/res/layout/: ax.xml
annotation/src/main/java/cc/ifnot/libs/annotation/: MyAnnotation.java
app/: build.gradle
app/src/androidTest/java/cc/ifnot/app/ft/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/cc/ifnot/app/: ITest.aidl
app/src/main/cpp/: CMakeLists.txt  foo.cpp  foo.h  foo_jni.cpp  native-lib.cpp
app/src/main/cpp/go_jni/: Makefile  go_jni.c  go_jni.cpp  go_jni_impl.go
app/src/main/cpp/test/: foo_unittest.cpp
app/src/main/java/: a.kt  app.kt
app/src/main/java/cc/ifnot/app/: KotlinActivity.kt  MainActivity.java
app/src/main/java/cc/ifnot/app/ft/: FtApp.java  MainActivity.java  SineWaveView.java
app/src/main/java/cc/ifnot/app/jni/: FooWrap.java  GoJniWrap.java
app/src/main/java/cc/ifnot/app/service/: ClientService.kt  ServerService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/cc/ifnot/app/ft/: ExampleUnitTest.java
ax/: build.gradle
ax/src/main/: AndroidManifest.xml
ax/src/main/aidl/cc/ifnot/ax/: IService.aidl
ax/src/main/aidl/cc/ifnot/ax/callback/: ICallback.aidl
ax/src/main/aidl/cc/ifnot/ax/data/: Err.aidl
ax/src/main/java/cc/ifnot/ax/: App.kt  FakeProvider.kt  MainActivity.kt  MyFragment.kt
ax/src/main/java/cc/ifnot/ax/service/: ClientService.java  Err.java  ServerService.java  ServerServiceImpl.java  Task.java
ax/src/main/java/cc/ifnot/ax/utils/: reflect.kt
ax/src/main/res/layout/: activity_main.xml
ax/src/main/res/values/: strings.xml  styles.xml
ax/src/test/java/cc/ifnot/ax/: ExampleUnitTest.kt
buildSrc/: build.gradle
buildSrc/src/main/java/: Vers.java
buildSrc/src/main/java/cc/ifnot/buildsrc/: MyClassTransformer.kt  MyVariantProcessor.kt
buildSrc/src/main/java/cc/ifnot/version/: VersionPlugin.java
gradle/wrapper/: gradle-wrapper.properties
hello/: build.gradle
hello/src/main/: AndroidManifest.xml
hello/src/main/java/cc/ifnot/app/hello/: App.java  MainActivity.java
hello/src/main/java/cc/ifnot/app/hello/shortcuts/: StaticShortcutsActivity.java
hello/src/main/res/layout/: activity_main.xml
hello/src/main/res/values/: shortcuts.xml
java/annotation/src/main/java/cc/ifnot/libs/annotation/: MyClass.java
java/design_patterns/: build.gradle
java/design_patterns/src/main/java/cc/ifnot/java/design_patterns/: MyClass.java
java/libs/: build.gradle
java/src/main/java/cc/ifnot/libs/java/: MyClass.java
java/threads/: build.gradle
libs/: build.gradle
libs/src/androidTest/java/cc/ifnot/app/libs/: ExampleInstrumentedTest.java
libs/src/test/java/cc/ifnot/app/libs/: ExampleUnitTest.java
log_lint/: build.gradle
log_lint/src/main/java/cc/ifnot/libs/log_lint/: LogIssueRegistry.java  LogUsageDetector.java
other/rxandroid/: build.gradle
other/rxjava/: build.gradle
threads/: build.gradle
threads/src/main/java/cc/ifnot/libs/threads/: MyClass.java  MyRunnable.java  WaitRunnable.java
threads2/: build.gradle
threads2/src/main/: AndroidManifest.xml
threads2/src/main/java/cc/ifnot/cc/thread/: MainActivity.java
threads_app/: build.gradle
threads_app/src/main/: AndroidManifest.xml
threads_app/src/main/java/cc/ifnot/cc/thread/: App.java  MainActivity.java
threads_app/src/main/res/layout/: activity_main.xml
utils/: build.gradle
utils/android/: build.gradle
utils/src/main/java/cc/ifnot/libs/utils/: Lg.java  MyClass.java
utils/utils_lint/aar/: build.gradle
(+38 files in other folders)
